--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,15 @@
         </dependency>
         <!-- Дополнительные зависимости, если они нужны, должны идти здесь -->
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
